--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -137,3 +137,22 @@
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
 
+
+article .VPImage.light,
+article .VPImage.dark {
+  background-color: var(--vp-c-default-soft);
+  border-radius: 6px;
+  -webkit-user-select: none;  /* Safari */
+  -moz-user-select: none;     /* Firefox */
+  -ms-user-select: none;      /* IE/Edge */
+  user-select: none;          /* Standard */
+}
+
+article .icon,
+article .VPImage.light,
+article .VPImage.dark {
+  -webkit-user-select: none;  /* Safari */
+  -moz-user-select: none;     /* Firefox */
+  -ms-user-select: none;      /* IE/Edge */
+  user-select: none;          /* Standard */
+}
